# Wifite4

./: .env.example  .gitignore  KNOWN_ISSUES.md  LICENSE  README(.md  README.md  TODO.md  ai_pentest_engine.py  alice.txt  debug_workspace.sh  github_exploit_repos.txt  google_cloud_integration.py  implementacja.txt  implementacja_for.txt  implementacja_v2.txt  main.py  metadata.json  metasploit_post_exploit.py  pentest_hf_registry.json  pentest_hf_registry.py  prepare.sh  prepare_ollama_finetune.sh  pytest.ini  requirements.txt  run.sh  run_full_pipeline.sh  run_full_pipeline_fixed.sh  run_full_pipeline_v2.sh  run_nim_docker.sh  run_tui.sh  setup.py  test.txt  test_nim_local.sh
.claude/: already_on_os.json
archives/: README.md
catalog/: catalog.schema.json  catalog.txt  github_0000000O0Oo_Wordpress-CVE-2020-25213.json  github_00mjk_exploit-CVE-2017-7494.json  github_00xCanelo_CVE-2025-27591.json  github_00xCanelo_CVE-2025-32778.json  github_00xCanelo_CVE-2025-49113.json  github_04Shivam_CVE-2023-30253-Exploit.json  github_0dayNinja_CVE-2021-24155.rb.json  github_0dayNinja_CVE-2021-24155_rb.json  github_0dayNinja_CVE-2021-3560.json  github_0dgt_CVE-2025-8110.json  github_0nsec_CVE-2023-35078.json  github_0p5cur_CVE-2025-32463-POC.json  github_0thm4n3_cve-2020-14882.json  (+5122 more)
wordlists/weakpass_tool/: .gitignore  LICENSE  README.md  example.py  pyproject.toml
wordlists/weakpass_tool/tests/: test_client.py  test_validators.py
wordlists/weakpass_tool/weakpass_integration/: __init__.py  cli.py  client.py  config.py  constants.py  exceptions.py  models.py  validators.py
(+8134 files in other folders)
